Verifying codeword, taking hints, displaying hints  HintService - hintsNotTakenByTeam  HintTakenService - getAllByTeam, getAllByTeamAndCypher

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -193,10 +193,14 @@ a:hover {
 
 }
 
-#hintButton{
-
-}
-
 #hintContent{
     visibility: hidden;
+    text-align: center;
+}
+
+#map{
+    visibility: hidden;
+}
+
+#navbarButton{
 }
