--- a/src/main/resources/templates/team/main.html
+++ b/src/main/resources/templates/team/main.html
@@ -74,8 +74,8 @@
                                     <td th:text="${team.numOfMembers}">8</td>
                                     <td th:text="${team.pin}">9876</td>
                                     <td>
-                                        <a href="#" th:href="@{'/team/update/'+${team.teamId}}">Upravit</a> |
-                                        <a href="#" th:href="@{'/team/delete/'+${team.teamId}}">Smazat</a>
+                                        <a href="#" th:href="@{/team/update/{teamId}(teamId=${team.teamId})}">Upravit</a> |
+                                        <a href="#" th:href="@{/team/delete/{teamId}(teamId=${team.teamId})}">Smazat</a>
                                     </td>
                                 </tr>
                             </th:block>
