delete unused attributes, add native query for ht, delete unused methods

--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -55,6 +55,7 @@
                         <div class="pb-2">
                             <b>Řešení</b>
                         </div>
+                        <input type="hidden"  th:field="*{stage}" >
                         <input type="hidden"  th:field="*{cypherId}" >
                         <input type="hidden" name="codeword"  th:field="*{codeword}" >
                         <input type="text" name="guess" class="solutionInput" >
